# HW_2_14

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 20abac8f2470_create_contacts_table.py  948cd24c1e0b_added_confirm_to_user.py  c63ea9e535f0_init.py
src/: config.py  db.py
src/auth/: crud.py  models.py  routes.py  schemas.py  services.py
src/contacts/: crud.py  routes.py  schemas.py
src/emails/: services.py
src/users/: crud.py  routes.py
tests/: bb_test_e2e_contacts.py  bb_test_unit_repository_todo.py  conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_crud_contacts.py  test_unit_repository_contacts.py
